samples/_failures_safe/1761653156_5ffe03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97232d19.c: In function ‘main’:
./samples/SAFE/__tmp_97232d19.c:152:9: error: expected declaration or statement at end of input
  152 |         }
      |         ^
./samples/SAFE/__tmp_97232d19.c:152:9: error: expected declaration or statement at end of input
